--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "sharp": "^0.33.0"
   },
   "devDependencies": {
-    "node-gyp": "^10.0.0"
+    "node-gyp": "^10.0.0",
+    "prettier": "^3.6.2"
   },
   "gypfile": true,
   "files": [
