chore: allow manual triggering of release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ on:
       - 'README.md'
       - 'docs/**'
       - '.github/workflows/ci.yml'
+  workflow_dispatch:
 
 permissions:
   contents: write
