chore: add some workflow caching

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,18 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
 
+      - name: Cache node-gyp
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/node-gyp
+            ~/.node-gyp
+            build/
+          key: ${{ runner.os }}-node-gyp-20-${{ hashFiles('binding.gyp', 'deps/**') }}
+          restore-keys: |
+            ${{ runner.os }}-node-gyp-20-
+            ${{ runner.os }}-node-gyp-
+
       - name: Install system dependencies
         run: |
           sudo apt-get update
@@ -66,6 +78,18 @@ jobs:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
+
+      - name: Cache node-gyp
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/node-gyp
+            ~/.node-gyp
+            build/
+          key: ${{ runner.os }}-node-gyp-20-${{ hashFiles('binding.gyp', 'deps/**') }}
+          restore-keys: |
+            ${{ runner.os }}-node-gyp-20-
+            ${{ runner.os }}-node-gyp-
 
       - name: Install system dependencies
         run: |
