--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,27 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
+      - name: Cache node-gyp
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/node-gyp
+            ~/.node-gyp
+            build/
+          key: ${{ runner.os }}-node-gyp-${{ matrix.node-version }}-${{ hashFiles('binding.gyp', 'deps/**') }}
+          restore-keys: |
+            ${{ runner.os }}-node-gyp-${{ matrix.node-version }}-
+            ${{ runner.os }}-node-gyp-
+
+      - name: Cache apt packages (Ubuntu)
+        if: runner.os == 'Linux'
+        uses: actions/cache@v4
+        with:
+          path: /var/cache/apt
+          key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/ci.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-apt-
+
       - name: Install system dependencies (Ubuntu)
         if: runner.os == 'Linux'
         run: |
@@ -76,10 +97,23 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
+      - name: Cache node-gyp
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/node-gyp
+            ~/.node-gyp
+            build/
+          key: ${{ runner.os }}-node-gyp-${{ matrix.node-version }}-${{ hashFiles('binding.gyp', 'deps/**') }}
+          restore-keys: |
+            ${{ runner.os }}-node-gyp-${{ matrix.node-version }}-
+            ${{ runner.os }}-node-gyp-
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
+          cache: 'pip'
 
       - name: Install dependencies
         run: npm ci
