Switch to a token that doesn't prevent recursive events

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,7 @@
     ".": {
       "package-name": "@monumental-works/apriltag-node",
       "release-type": "node",
+      "draft": false,
       "changelog-sections": [
         {"type": "feat", "section": "Features", "hidden": false},
         {"type": "fix", "section": "Bug Fixes", "hidden": false},
